--- a/css/styles.css
+++ b/css/styles.css
@@ -212,26 +212,18 @@ nav ul li:hover a {
     color: #999999;
     padding-left: 12rem;
 }
-.search-button {
-    background: url('../images/thumbnails/search.png') 10rem 13rem no-repeat;
-    width: 35rem;
-    height: 35rem;
-    cursor: pointer;
-    float: right;
-}
 .search-radius-button-wrapper {
-    margin-top: 55rem;
+    margin-top: 37rem;
     text-align: center;
 }
 .search-radius-button {
     font-family: 'oswald_regularregular', sans-serif;
-    font-size: 30rem;
+    font-size: 32rem;
     height: 68rem;
     width: 246rem;
     border-radius: 0;
-    background-color: #006699;
+    background-color: #167c9a;
     color: #ffffff;
-
 }
 /* Tabs ---------------------------------------------------------------------*/
 .tabs li {
@@ -693,7 +685,7 @@ header {
 }
 .map {
     background: url('../images/thumbnails/world.png') center top no-repeat;
-    height: 600rem;
+    height: 594rem;
     width: 100%;
 }
 .locator {
@@ -710,8 +702,24 @@ header {
 }
 .zip-address-wrapper {
     text-align: center;
-    margin-top: 63rem;
+    margin-top: 64rem;
     position: relative;
+}
+.zip-address::-webkit-input-placeholder {
+    color:#999999;
+    line-height: 60rem;
+}
+.zip-address::-moz-placeholder          {
+    color:#999999;
+    line-height: 60rem;
+}
+.zip-address:-moz-placeholder           {
+    color:#999999;
+    line-height: 60rem;
+}
+.zip-address:-ms-input-placeholder      {
+    color:#999999;
+    line-height: 60rem;
 }
 .location-icon {
     height: 25rem;
@@ -730,7 +738,7 @@ header {
     height: 56rem;
 }
 .range-radius {
-    margin-top:55rem;
+    margin-top:44rem;
     display: block;
     text-align: center;
 }
@@ -740,24 +748,31 @@ header {
     display: inline-block;
     background-color: rgba(0, 0, 0, 0);
     border: 0;
-    font-family: 'Oswald', sans-serif;
-    font-size: 36rem;
+    font-family: 'oswald_regularregular', sans-serif;
+    font-size: 41rem;
     padding: 0;
 }
+.range-radius select {
+    border: 0 !important;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-overflow: '';
+    background: url('../images/icons/selector-button.png') 140rem center no-repeat;
+}
 .range-radius label {
-    font-family: 'Oswald', sans-serif;
-    font-size: 36rem;
+    font-family: 'oswald_regularregular', sans-serif;
+    font-size: 41rem;
     text-transform: uppercase;
     color: #b8b8b8;
 }
 footer {
-    border-top: 2rem solid #d7d7d7;
+    border-top: 1rem solid #d7d7d7;
     height: 355rem;
 }
 .footer-wrapper {
     width: 100%;
     text-align: justify;
-    margin-top: 49rem;
+    margin-top: 46rem;
 }
 .footer-wrapper:after {
     content: "";
@@ -768,18 +783,27 @@ footer {
     font-family: 'aleoregular', sans-serif;
     color: #434343;
     text-transform: uppercase;
+    font-size: 40rem;
+    font-weight: lighter;
+    line-height: 31rem;
 }
 .footer-social-links p {
+    margin-top: 22rem;
     font-family: 'aleoregular', sans-serif;
-    font-size: 16rem;
+    font-size: 15rem;
     color: #999999;
 }
 .footer-social-links ul li {
     list-style: none;
-    display: inline-block;
+    height: 47rem;
+    width: 46rem;
+    float: left;
+}
+.footer-social-links ul {
+    margin-top: 16rem;
 }
 .footer-general-links ul li {
-    margin-top: 15rem;
+    margin-top: 17rem;
     list-style: none;
     padding: 0;
 }
@@ -787,42 +811,56 @@ footer {
     text-decoration: none;
     color: #666666;
     font-family: 'oswaldlight', sans-serif;
-    font-size: 18rem;
+    font-size: 19rem;
 }
 .footer-general-links h1,
 .footer-blogs h1,
 .subscription-forms h1 {
     font-family: 'oswald_regularregular', sans-serif;
-    font-size: 18rem;
+    font-size: 21rem;
     text-transform: uppercase;
-    margin-bottom: 38rem;
+    margin-bottom: 30rem;
+    font-weight: lighter;
+    color: #333333;
 }
 .footer-blogs h3 {
     font-family: 'oswaldlight', sans-serif;
     font-size: 18rem;
+    font-weight: lighter;
     color: #333333;
-    margin-top: 25rem;
+    margin-top: 32rem;
+}
+.footer-blogs h3:first-child {
+    margin-top: 28rem;
 }
 .footer-blogs p {
     font-family: 'oswaldlight', sans-serif;
-    font-size: 18rem;
+    font-size: 17rem;
     color: #999999;
-    margin-top: 20rem;
+    margin-top: 15rem;
+    line-height: 25rem;
 }
 .subscription input {
     font-family: 'oswaldlight', sans-serif;
     font-size: 16rem;
-    height: 36rem;
+    line-height: 35rem;
     width: 100%;
     background-color: #f6f6f6;
     padding-left: 10rem;
     border: 1rem solid #cccccc;
     border-radius: 0;
+    color: #999999;
+}
+.subscription select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-overflow: '';
+    background: url('../images/icons/selector-gender-button.png') 120rem center no-repeat;
+    padding-left: 10rem;
 }
 #gender {
     font-family: 'oswaldlight', sans-serif;
     font-size: 16rem;
-    color: #999999;
     margin-top: 15rem;
     width: 140rem;
     height: 36rem;
@@ -832,12 +870,13 @@ footer {
 .subscription-button {
     font-family: 'oswald_regularregular', sans-serif;
     font-size: 16rem;
+    font-weight: bold;
     color: #ffffff;
-    background-color: #006699;
+    background-color: #167c9a;
     border-radius: 0;
     width: 130rem;
     height: 36rem;
-    margin-top: 25rem;
+    margin-top: 21rem;
 }
 /* Mobile View --------------------------------------------------------------*/
 @media (max-width: 767px) {
@@ -1010,8 +1049,8 @@ footer {
         vertical-align: top;
     }
     .icon-link {
-        height: 35rem;
-        width: 35rem;
+        height: 34rem;
+        width: 34rem;
         margin: 10rem 0 0 0;
         display: block;
     }
@@ -1100,8 +1139,8 @@ footer {
         width: 640rem;
     }
     .location-icon {
-        left: 350rem;
-        top: 16rem;
+        left: 344rem;
+        top: 17rem;
     }
     .footer-social-links,
     .footer-general-links,
@@ -1110,6 +1149,10 @@ footer {
         width: 220rem;
         display: inline-block;
         vertical-align: top;
+        text-align: left;
+    }
+    .footer-social-links ul {
+        width: 200rem;
     }
     .icon-link {
         height: 35rem;
