--- a/css/styles.css
+++ b/css/styles.css
@@ -900,7 +900,7 @@ footer {
 /* Mobile View --------------------------------------------------------------*/
 @media (max-width: 767px) {
     .container {
-        width: 360rem;
+        width: 300rem;
         padding-right: 20rem;
         padding-left: 20rem;
     }
@@ -977,9 +977,17 @@ footer {
         width: 93rem;
         background-color: #e9e9e9;
     }
+    .map {
+        background: url('../images/thumbnails/world.png') center bottom no-repeat;
+        height: 300px;
+    }
+    .zip-address {
+        width: 200rem;
+        border: 1rem solid #333333;
+    }
 }
 /* Tablet View --------------------------------------------------------------*/
-@media (min-width: 768px) and (max-width: 999px) {
+@media (min-width: 767px) and (max-width: 1024px) {
     .container {
         width: 660rem;
         padding-right: 20rem;
@@ -1089,7 +1097,7 @@ footer {
     }
 }
 /* Desktop View -------------------------------------------------------------*/
-@media (min-width: 1000px) {
+@media (min-width: 1025px) {
     .container {
         width: 1000rem;
         padding-right: 30rem;
