--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,7 @@ body {
     letter-spacing: 0.15rem;
     line-height: 25rem;
     width: 220rem;
-    height: 30rem;
+    height: 30.4rem;
     text-align: center;
     text-decoration: none;
 }
@@ -127,7 +127,7 @@ body {
     border-top: 22rem solid #f52c66;
     width: 0;
     height: 0;
-    margin-top: -20rem;
+    margin-top: -19.6rem;
 }
 
 /* Scaffolding --------------------------------------------------------------*/
@@ -180,23 +180,6 @@ nav {
     border-bottom: 1rem solid #cccccc;
     border-top: 1rem solid #cccccc;
 }
-nav ul li {
-    float: left;
-    list-style: none;
-    width: 74rem;
-    text-align: center;
-}
-nav ul li a {
-    color: #000000;
-    display: block;
-    font-family: 'oswaldlight', sans-serif;
-    font-size: 18rem;
-    text-decoration: none;
-    line-height: 35rem;
-}
-nav ul li:hover a {
-    color: #ffffff;
-}
 /* Search -------------------------------------------------------------------*/
 .search-wrapper {
     height: 35rem;
@@ -239,6 +222,7 @@ nav ul li:hover a {
 .tabs li:first-child {
     border-left: 1rem solid #cccccc;
     font-family: 'aleoregular', sans-serif;
+    height: 30.5rem;
 }
 .tabs li:nth-child(2) {
     font-family: 'oswald_regularregular', sans-serif;
@@ -405,15 +389,13 @@ header {
 .tab-group {
     background-color: #e9e9e9;
     height: 30rem;
-    border-bottom: 1rem solid #cccccc;
+    border-bottom: 0.5rem solid #cccccc;
 }
 .currency {
     font-family: 'oswaldlight', sans-serif;
     font-size: 17rem;
     color: #999999;
     position: absolute;
-    top: 45rem;
-    left: 30rem;
 }
 .flag {
     height: 17rem;
@@ -441,28 +423,18 @@ header {
 #currency:hover div:last-child:after {
     background: url('../images/icons/icons.png') -293rem 0 no-repeat;
 }
-.logo {
-    position: absolute;
-    top: 24rem;
-    left: 50%;
-    margin-left: -128rem;
-}
 .account-info {
     position: absolute;
     font-family: 'oswaldlight', sans-serif;
-    font-size: 16rem;
 }
 .account-info li {
     display: inline-block;
     list-style: none;
 }
-.account-info li:nth-child(2) {
-    margin-left: 7rem;
-}
 .account-info li:not(:last-child):after{
     content: " | ";
     color: #999999;
-    margin-left: 6rem;
+
 }
 .account-info li a {
     text-decoration: none;
@@ -471,17 +443,11 @@ header {
 .account-info li a:hover {
     color: #000000;
 }
-.cart {
-    font-size: 24rem;
-    margin-left: 7rem;
-}
 .cart-quantity {
     color: #000000;
-    font-size: 24rem;
 }
 .total-sum {
     color: #999999;
-    font-size: 24rem;
 }
 .adv-wrapper {
     margin: 42rem auto 0 auto;
@@ -904,6 +870,12 @@ footer {
         padding-right: 20rem;
         padding-left: 20rem;
     }
+    .logo {
+        position: absolute;
+        top: 24rem;
+        left: 50%;
+        margin-left: -128rem;
+    }
     .notification {
         display: none;
     }
@@ -978,7 +950,6 @@ footer {
         background-color: #e9e9e9;
     }
     .map {
-        background: url('../images/thumbnails/world.png') center bottom no-repeat;
         height: 300px;
     }
     .zip-address {
@@ -993,24 +964,99 @@ footer {
         padding-right: 20rem;
         padding-left: 20rem;
     }
+    .logo {
+        position: absolute;
+        top: 23rem;
+        left: 55%;
+        margin-left: -128rem;
+    }
     .mobile-button {
         display: none;
     }
     .notification {
         right: 20rem;
     }
-    .account-info {
-        right: 20rem;
-        top: 60rem;
-    }
     .desktop-visible {
         display: none !important;
+    }
+    .currency {
+        top: 52rem;
+        left: 20rem;
+    }
+    .account-info {
+        right: 20rem;
+        top: 56rem;
+        font-size: 17rem;
+    }
+    .account-info li:nth-child(2) {
+        margin-left: 4rem;
+    }
+    .account-info li:not(:last-child):after{
+        content: " | ";
+        color: #999999;
+        margin-left: 3rem;
+    }
+    .cart {
+        font-size: 18rem;
+        margin-left: 4rem;
+    }
+    .total-sum {
+        margin-left: 2rem;
+    }
+    nav ul li {
+        float: left;
+        list-style: none;
+        height: 35rem;
+        text-align: center;
+    }
+    nav ul li:first-child {
+        margin-left: -10rem;
+        padding-left: 11rem;
+        padding-right: 11rem;
+    }
+    nav ul li:nth-child(2) {
+        padding-left: 27rem;
+        padding-right: 19rem;
+    }
+    nav ul li:nth-child(3) {
+        padding-left: 20rem;
+        padding-right: 19rem;
+    }
+    nav ul li:nth-child(4) {
+        padding-left: 18.5rem;
+        padding-right: 20rem;
+    }
+    nav ul li:nth-child(5) {
+        padding-left: 20rem;
+        padding-right: 20rem;
+    }
+    nav ul li:nth-child(6) {
+        padding-left: 20rem;
+        padding-right: 20rem;
+    }
+    nav ul li a {
+        display: table-cell;
+        height: 100%;
+        color: #000000;
+        font-family: 'oswaldlight', sans-serif;
+        font-size: 18rem;
+        text-decoration: none;
+        padding-top: 11rem;
+    }
+    nav ul li:hover a {
+        color: #ffffff;
     }
     nav ul li:hover {
         background-color: #000000;
     }
+    nav ul li {
+        display: table;
+        vertical-align: bottom;
+    }
     .search-wrapper {
         width: 40rem;
+        background: url('../images/icons/Search.png') center no-repeat;
+        background-size: 15rem;
     }
     .search-input {
         display: none;
@@ -1020,10 +1066,16 @@ footer {
         background-position: center top;
     }
     .next {
-        right: 10rem;
+        right: 0;
+        top: 137rem;
+        height: 55rem;
+        width: 30rem;
     }
     .prev {
-        left: 10rem;
+        left: 0;
+        top: 137rem;
+        height: 55rem;
+        width: 30rem;
     }
     .goods-block {
         height: 308rem;
@@ -1070,7 +1122,6 @@ footer {
         width: 180rem;
     }
     .map {
-        background: url('../images/thumbnails/world.png') center bottom no-repeat;
         height: 593px;
     }
     .zip-address {
@@ -1103,18 +1154,70 @@ footer {
         padding-right: 30rem;
         padding-left: 30rem;
     }
+    .logo {
+        position: absolute;
+        top: 24rem;
+        left: 50%;
+        margin-left: -128rem;
+    }
     .mobile-button {
         display: none;
     }
     .account-info {
         right: 30rem;
         top: 40rem;
+        font-size: 16rem;
+    }
+    .account-info li:nth-child(2) {
+        margin-left: 7rem;
+    }
+    .account-info li:not(:last-child):after{
+        content: " | ";
+        color: #999999;
+        margin-left: 6rem;
+    }
+    .cart {
+        font-size: 24rem;
+        margin-left: 7rem;
+    }
+    .currency {
+        top: 45rem;
+        left: 30rem;
+    }
+    nav ul li {
+        float: left;
+        list-style: none;
+        width: 74rem;
+        text-align: center;
+    }
+    nav ul li a {
+        color: #000000;
+        display: block;
+        font-family: 'oswaldlight', sans-serif;
+        font-size: 18rem;
+        text-decoration: none;
+        line-height: 35rem;
+    }
+    nav ul li:hover a {
+        color: #ffffff;
     }
     nav ul li:hover {
         background-color: #167c9a;
     }
     .search-wrapper {
         width: 247rem;
+    }
+    .next {
+        top: 200rem;
+        right: -60rem;
+        height: 69rem;
+        width: 32rem;
+    }
+    .prev {
+        top: 200rem;
+        right: -60rem;
+        height: 69rem;
+        width: 32rem;
     }
     .adv-blocks {
         width: 220rem;
@@ -1177,9 +1280,7 @@ footer {
         display: none;
     }
     .map {
-        background: url('../images/thumbnails/world.png') center top no-repeat;
         height: 594rem;
-        width: 100%;
     }
     .zip-address {
         width: 640rem;
