--- a/css/styles.css
+++ b/css/styles.css
@@ -1262,6 +1262,9 @@ footer {
     .footer-social-links p {
         margin-top: 17rem;
     }
+    .footer-social-links ul {
+        margin-top: 0;
+    }
     .footer-social-links,
     .footer-general-links,
     .footer-blogs,
@@ -1271,9 +1274,28 @@ footer {
         vertical-align: top;
     }
     .footer-general-links h1,
-    .footer-blogs h1,
-    .subscription-forms h1 {
+    .footer-blogs h1 {
         margin-bottom: 34rem;
+    }
+    .footer-general-links ul li {
+        margin-top: 21rem;
+    }
+    .footer-blogs p {
+        text-align: left;
+    }
+    .subscription-forms h1 {
+        margin-bottom: 33rem;
+    }
+    .subscription-button {
+        width: 100%;
+        font-weight: normal;
+    }
+    .subscription select {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        text-overflow: '';
+        background: url('../images/icons/selector-gender-button.png') 120rem center no-repeat;
+        padding-left: 10rem;
     }
     .icon-link {
         height: 34rem;
